--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">History</a>
+            <a class="nav-link" href="history.html">History</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
