--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -21,7 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
 
     <!--story map plugin-->
-    <script src="../../dist/storymap.2.3.js"></script>
+    <script src="dist/storymap.2.3.js"></script>
 
 
 
