--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -86,7 +86,7 @@
 
 <div id="storymap" class="container-fluid" style="margin-top:10px">>
     <div class="row">
-        <div class="col-sm-4 storymap-story">
+        <div class="col-sm-4 col-sm-4 storymap-story">
             <section data-scene="scene1"><h2>River Shuttle Service</h2>
                 <p>Local resident, Tesha Socha,  provides a shuttle service up and down the Siletz River. Her number is 541-444-1111.</p>
                 <p>It is advised you call ahead in off season as the shuttle service may not be available.  Additionally, if you plan a drift after 11:00 a.m., it would be a good idea to make plans with Tesha either the day before or early in the morning of your planned drift.  </p>
@@ -100,7 +100,7 @@
             <section data-scene="scene3"><h2>Moonshine Park</h2></section>
 
         </div>
-        <div class="col-sm-4 storymap-map"></div>
+        <div class="col-sm-4 col-md-4 storymap-map"></div>
     </div>
 </div>
 <script type="text/javascript">
