--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -58,10 +58,10 @@
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownservices" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Local Services
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownservices">
               <a class="dropdown-item" href="RiverShuttleService.html">Shuttle Services</a>
               <a class="dropdown-item" href="blog-home-2.html">River Guide</a>
               <a class="dropdown-item" href="moonshine.html">Moonshine Park</a>
@@ -134,9 +134,9 @@
     };
 
     var scenes = {
-        scene1: {lat: 44.757, lng: -123.9, zoom: 12.5, layers: ['layer1','layer2'], name: "scene1"},
+        scene1: {lat: 44.757, lng: -123.9, zoom: 12.5, layers: [layers.layer1,layers.layer2], name: "scene1"},
 
-        scene2: {lat: 44.757, lng: -123.899, zoom: 12.8, layers: ['layer1','layer3'], name: "layer3"},
+        scene2: {lat: 44.757, lng: -123.899, zoom: 12.8, layers: [layers.layer1,layers.layer3], name: "layer3"},
         // scene3: {lat: 44, lng: -123.5, zoom: 7, layers: ['Mapbox_Satellite'], name: "Mapbox Satellite"},
         //scene5: {lat: 44, lng: -123.5, zoom: 7, layers: ['Mapbox_Dark'], name: "Mapbox Dark"},
         //scene6: {lat: 44, lng: -123.5, zoom: 7, layers: ['Mapbox_Outdoors'], name: "Mapbox Outdoors"},
@@ -149,7 +149,7 @@
     $('#storymap').storymap({
         scenes: scenes,
         layers: layers,
-        baselayer: layers.layer2,
+        baselayer: layers.layer1,
         navbar: false,
         legend: false,
         loader: false,
@@ -159,7 +159,7 @@
         progressline: true,
         navwidget: true,
         createMap: function () {
-            var map = L.map($(".storymap-map")[0], {zoomControl: false, scrollWheelZoom: true}).setView([44.757, -123.9], 12.5);
+            var map = L.map($(".storymap-map")[0], {zoomControl: false, scrollWheelZoom: false});
             L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiamFrb2J6aGFvIiwiYSI6ImNpcms2YWsyMzAwMmtmbG5icTFxZ3ZkdncifQ.P9MBej1xacybKcDN_jehvw', {
               maxZoom: 18,
               attribution: '<a target="_blank">Ashley Lowe</a>',
