--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -89,11 +89,13 @@
     <div class="row">
         <div class="col-sm-4 col-sm-4 storymap-story">
             <section data-scene="scene1"><h2>River Shuttle Service</h2>
+              <h4>General Information</h4>
                 <p>Local resident, Tesha Socha,  provides a shuttle service up and down the Siletz River. Her number is 541-444-1111.</p>
                 <p>It is advised you call ahead in off season as the shuttle service may not be available.  Additionally, if you plan a drift after 11:00 a.m., it would be a good idea to make plans with Tesha either the day before or early in the morning of your planned drift.  </p>
+                <h4>Envelope drop Off Locations</h4>
                 <p>Shuttle envelopes are available outside the Logsden Country Store beside the dropbox.  You may also leave a shuttle envelope at “Larry’s Old Place” (a mechanic shop) in Siletz.  The price is noted on the envelope and you will want to be sure to include the money and the key inside.  She does not accept checks. </p>
                 </section>
-            <section data-scene="scene2"><h2>River Shuttle Service</h2>
+            <section data-scene="scene2"><h2>River Shuttle Service </h2>
               <p> Moonshine to Twin, Twin to Illahee, Old Mill to Ojalla, Ojalla to Morgan…. $20.00</p>
               <p>All other drifts would be considered double drifts………. $25.00 </p>
               <p>Logsden Store DOES NOT collect money for the shuttles.</p>
@@ -137,7 +139,7 @@
         scene1: {lat: 44.757, lng: -123.9, zoom: 12, layers: [layers.layer1,layers.layer2], name: "scene1"},
 
         scene2: {lat: 44.777, lng: -123.93, zoom: 12.4, layers: [layers.layer1,layers.layer3], name: "layer3"},
-        // scene3: {lat: 44, lng: -123.5, zoom: 7, layers: ['Mapbox_Satellite'], name: "Mapbox Satellite"},
+        scene2: {lat: 44.777, lng: -123.93, zoom: 12.4, layers: [layers.layer1,layers.layer3], name: "layer3"},
         //scene5: {lat: 44, lng: -123.5, zoom: 7, layers: ['Mapbox_Dark'], name: "Mapbox Dark"},
         //scene6: {lat: 44, lng: -123.5, zoom: 7, layers: ['Mapbox_Outdoors'], name: "Mapbox Outdoors"},
         //scene7: {lat: 44, lng: -123.5, zoom: 7, layers: ['Mapbox_Streets'], name: "Mapbox Streets"},
