--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>TileLayers</title>
+    <title>Split</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--add required stylesheets-->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css">
-    <!-- Bootstrap core CSS -->
+
+    <!--add required stylesheets-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!--leaflet css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!--add favicon for the web page-->
+    <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
+
+    <!--Font-->
+    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="../../dist/storymap.2.5.css">
+
+
+    <style>
+
+
+
+    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"></script>
+    <!--jquery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 
-    <!--animation-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="../../dist/storymap.2.5.css">
-    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
-    <!--add required libraries-->
-    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--boostrap-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!--leaflet.ajax for asynchronously adding geojson data-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
-
     <!--story map plugin-->
-    <script src="dist/storymap.2.5.js"></script>
-
+    <script src="../../dist/storymap.2.5.js"></script>
 
 
 </head>
@@ -111,6 +124,8 @@
 
 
     var layers = {
+      ESRI: {layer: L.tileLayer('http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}')},
+      GEE: {layer: L.tileLayer('http://earthengine.google.org/static/hansen_2013/tree_alpha/{z}/{x}/{y}.png')},
 
         layer1: {
             layer: L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiamFrb2J6aGFvIiwiYSI6ImNpcms2YWsyMzAwMmtmbG5icTFxZ3ZkdncifQ.P9MBej1xacybKcDN_jehvw', {
@@ -135,16 +150,11 @@
 
     };
 
+
     var scenes = {
         scene1: {lat: 44.757, lng: -123.9, zoom: 12, layers: [layers.layer1,layers.layer2], name: "scene1"},
-
         scene2: {lat: 44.777, lng: -123.93, zoom: 12.4, layers: [layers.layer1,layers.layer3], name: "layer3"},
-        scene2: {lat: 44.777, lng: -123.93, zoom: 12.4, layers: [layers.layer1,layers.layer3], name: "layer3"},
-        //scene5: {lat: 44, lng: -123.5, zoom: 7, layers: ['Mapbox_Dark'], name: "Mapbox Dark"},
-        //scene6: {lat: 44, lng: -123.5, zoom: 7, layers: ['Mapbox_Outdoors'], name: "Mapbox Outdoors"},
-        //scene7: {lat: 44, lng: -123.5, zoom: 7, layers: ['Mapbox_Streets'], name: "Mapbox Streets"},
-       //scene8: {lat: 44, lng: -123.5, zoom: 7, layers: ['NightView'], name: "NightView"},
-         //scene9: {lat: 44, lng: -123.5, zoom: 7, layers: ['OpenStreetMap'], name: "OpenStreetMap"}
+        scene3: {lat: 44.777, lng: -123.93, zoom: 12.4, layers: [layers.layer1,layers.layer3], name: "layer3"}
     };
 
 
