--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>TileLayers</title>
+    <title>River Shuttle Routes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,7 +18,7 @@
     <!--Icons-->
     <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="../../dist/storymap.2.4.css">
+    <link rel="stylesheet" type="text/css" href="dist/storymap.2.4.css">
     <!--add required libraries-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"></script>
@@ -32,7 +32,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
 
     <!--story map plugin-->
-    <script src="../../dist/storymap.2.4.js"></script>
+    <script src="dist/storymap.2.4.js"></script>
 
 
     <style>
