--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -50,7 +50,7 @@
     <!--leaflet.ajax for asynchronously adding geojson data-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <!--story map plugin-->
-    <script src="../../dist/storymap.2.4.js"></script>
+    <script src="dist/storymap.2.4.js"></script>
 
 
 </head>
