--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="card h-100">
           <h4 class="card-header">About</h4>
           <div class="card-body">
-            <p class="card-text"> Read about those our employees and owner</p>
+            <p class="card-text"> Read about our employees and owner</p>
           </div>
           <div class="card-footer">
             <a href="about.html" class="btn btn-primary">Learn More</a>
@@ -176,23 +176,23 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Moonshine Park</h4>
+          <h4 class="card-header">River Suttle Service</h4>
           <div class="card-body">
-            <p class="card-text"> Moonshine Park is located just 4 miles down Moonshine Park Rd just across the Bridge from the Logsden Store.  </p>
+            <p class="card-text"> Local resident, Tesha Socha,  provides a shuttle service up and down the Siletz River. Her number is 541-444-1111.  </p>
           </div>
           <div class="card-footer">
-            <a href="services.html" class="btn btn-primary">Learn More</a>
+            <a href="RiverShuttleService.html" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">River Service Service</h4>
+          <h4 class="card-header">Community Club</h4>
           <div class="card-body">
-            <p class="card-text"> Local resident, Tesha Socha,  provides a shuttle service up and down the Siletz River. Her number is 541-444-1111.</p>
+            <p class="card-text"> For those in the area, there is a monthly community meeting held every 2nd Saturday of the month!</p>
           </div>
           <div class="card-footer">
-            <a href="RiverShuttleService.html" class="btn btn-primary">Learn More</a>
+            <a href="https://www.facebook.com/groups/1058274074202523/" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
