--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>About Us</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -112,27 +112,27 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+          <img class="card-img-top" src="img/chris.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Chris Mann</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Morning Chris</h6>
             <p class="card-text">Stop in and see Chris week mornings! She has been employeed with us since 2000.</p>
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+          <img class="card-img-top" src="img/roxy.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Roxanna Johnson</h4>
             <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Stop in and see Roxy week afternoons! She has been employeed with us since 2000.</p>
+            <p class="card-text">Stop in and see Roxy week afternoons! She has been employeed with us since 2007.</p>
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
             <p class="card-text">Sue works many days and kicks but by keeping the deli up todate. She has been with us since 2000.</p>
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+
           </div>
         </div>
       </div>
@@ -169,22 +169,22 @@
     <h2>Our Customers</h2>
     <div class="row">
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="img/customer1.jpg" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="img/custmer2.jpg" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="img/customer3.jpg" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="img/custmer4.jpg" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="img/customer5.jpg" alt="">
       </div>
       <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+        <img class="img-fluid" src="img/customer7.jpg" alt="">
       </div>
     </div>
     <!-- /.row -->
