--- a/history.html
+++ b/history.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>History of Logsden</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -93,17 +93,21 @@
     </ol>
 
     <!-- Image Header -->
-    <img class="img-fluid rounded mb-4" src="http://placehold.it/1200x300" alt="">
+    <img class="img-fluid rounded mb-4" src="img/1950store.jpg" alt="">
 
 
     <div class="row">
       <!-- Map Column -->
-      <div class="col-lg-8 mb-4">
-        <!-- Embedded Google Map -->
+
+
       </div>
       <div class="col-lg-12">
         <h2>Logsden History</h2>
         <p>Interestingly enough, there has been a store in Logsden for over 100 years.  At one time, there were two stores in Logsden!  And originally it was called Orton, not Logsden!  I will explain all this later.  In the meantime, I want to talk about what I remember and what my mother has shared with me.</p>
+
+        <img class="card-img-top" src="img/scan0061.jpg" alt="">
+
+
         <p>My parents were Don and Betty Coates.  They purchased the store from Oscar and Crystal Klinkhart  October 1951.  I was about 2 years old and my brother Don was 8 months.   It was a busy little store in those days as  logging was a thriving enterprise.  The C.D. Johnson era ended in 1951 with the purchase by Georgia Pacific Corp.  The GP”housing”, as we called it then, lined the area on the road to the gorge with young families all associated with the logging industry.  It was the 50′s and I can remember the bustling in the store as the young housewives, babies in tow, their hair up in curlers, gathered at the post office waiting for the mail delivery.  The store and post office was the hub for socializing and grocery purchases; a meat market, gas and oil station, feed store, and even a smattering of department store items drew families from as far away as Nashville.  There were wrangler jeans, wool socks, long underwear, sweatshirts,  and always an array of baby items for an upcoming baby shower.  There were towels, sheets, and various kitchen items including an eclectic collection of salt and pepper shakers for wedding showers.
         </p>
 
