--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -72,7 +72,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">History</a>
+            <a class="nav-link" href="history.html">History</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -160,7 +160,7 @@
                 },  })},
         layer3: {layer: L.geoJson.ajax('assets/shuttle.geojson', {onEachFeature: function (feature, layer) {
                 layer.bindPopup(feature.properties.location );
-                
+
                 layer.on('mouseover', function() { layer.openPopup(); });
                 layer.on('mouseout', function() { layer.closePopup(); });
 
