--- a/index.html
+++ b/index.html
@@ -12,19 +12,49 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="img/gas.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-
+  <!--facebook icon-->
 </head>
-
+<style>
+.social {
+    position:fixed;
+    cursor: pointer;
+    font-size:24px;
+    color:darkgray;
+    z-index:1003;
+    top: 4%;
+    left:2px;
+}
+.social2 {
+    position:fixed;
+    cursor: pointer;
+    font-size:24px;
+    color:darkgray;
+    z-index:1003;
+    top: 4%;
+    left:30px;
+}
+.social:hover {
+    color: darkblue;
+    text-decoration: none;
+}
+</style>
 <body>
 
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
+      <a class="fab fa-facebook-square social" href="https://www.facebook.com/Logsden-Country-Store-145149642191251/" target="_blank"></a>
+      <a class="fab fa-instagram social2" href="https://www.instagram.com/logsdencountry/" target="_blank"></a>
+
       <a class="navbar-brand" href="index.html">Logsden, Oregon</a>
+
+
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,9 +66,7 @@
           <li class="nav-item">
             <a class="nav-link" href="history.html">History</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+
           <li class="nav-item dropdown">
         <!--- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Portfolio
         </a> --->
@@ -60,18 +88,10 @@
               <a class="dropdown-item" href="moonshine.html">Moonshine Park</a>
             </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Other Pages
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-              <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item" href="404.html">404</a>
-              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
+          <li class="nav-item dropdown">
         </ul>
       </div>
     </div>
@@ -128,7 +148,7 @@
       <p>The area is a sportsman’s playground where hunting and fishing abounds.  Lincoln County’s Moonshine Campground is just up the road and offers camping sites for tents and motor homes.</p>
     </div>
     <div class="col-lg-6">
-      <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
+      <img class="img-fluid rounded" src="img/Logsden 001.jpg" alt="">
     </div>
   </div>
 
