--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -15,6 +15,8 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
 <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
 <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://cdn.bootcss.com/chroma-js/1.3.3/chroma.min.js"></script>
 
     <!--add favicon for the web page-->
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
@@ -57,13 +59,44 @@
     <script src="dist/storymap.2.4.js"></script>
 
 
-</head>
+    <link rel="shortcut icon" href="img/gas.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
-<body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Logsden, Oregon</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+  </head>
+  <style>
+  .social {
+      position:fixed;
+      cursor: pointer;
+      font-size:24px;
+      color:darkgray;
+      z-index:1003;
+      top: 1%;
+      left:2px;
+  }
+  .social2 {
+      position:fixed;
+      cursor: pointer;
+      font-size:24px;
+      color:darkgray;
+      z-index:1003;
+      top: 1%;
+      left:30px;
+  }
+  .social:hover {
+      color: darkblue;
+      text-decoration: none;
+  }
+
+  </style>
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="fab fa-facebook-square social" href="https://www.facebook.com/Logsden-Country-Store-145149642191251/" target="_blank"></a>
+        <a class="fab fa-instagram social2" href="https://www.instagram.com/logsdencountry/" target="_blank"></a>
+
+        <a class="navbar-brand" href="index.html">Logsden, Oregon</a>
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -98,17 +131,8 @@
               <a class="dropdown-item" href="moonshine.html">Moonshine Park</a>
             </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Other Pages
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-              <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item" href="404.html">404</a>
-              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -128,22 +152,117 @@
                 </section>
             <section data-scene="scene2"><h2>River Shuttle Service </h2>
               <p> Moonshine to Twin, Twin to Illahee, Old Mill to Ojalla, Ojalla to Morgan…. $20.00</p>
+              <p>Hover over location and see boat launch.</p>
               <p>All other drifts would be considered double drifts………. $25.00 </p>
               <p>Logsden Store DOES NOT collect money for the shuttles.</p>
             </section>
-            <section data-scene="scene3"><h2>Moonshine Park</h2></section>
+            <section data-scene="scene3" data-background="img/moonshine.jpg">
+              <div class="fullscreen text-center">
+              <h1 class="">Moonshine Park <small style="color: rgba(255,255,255,0.95)"></br>Drift down to Twin $20 </br>
+                          Park Amenities and Fees </br>
+                          Day Use  $3 per Vehicle </br>
+                          Overnight Camping $20 
+                        </small></h1>
 
+              </div>
+            </section>
+            <section data-scene="scene4" data-background="img/twin.jpg">
+              <div class="fullscreen text-center">
+              <h1 class="">Twin Bridges <small style="color: rgba(255,255,255,0.95)"></br>Drift to Hee Hee Illahe Park $20 </br>
+                          Park Amenities</br>
+                          Batroom and Picnic Tables </br>
+                          NO Camping
+                        </small></h1>
+
+              </div>
+            </section>
+
+
+        </section>
+        <section data-scene="scene5" data-background="img/oldmill.jpg">
+          <div class="fullscreen text-center">
+          <h1 class="">Old Mill<small style="color: rgba(255,255,255,0.95)"></br>Drift to Ojalla $20 </br>
+                      NO Camping
+                    </small></h1>
+
+        </section>
+        <section data-scene="scene6" data-background="img/ojalla.jpg">
+          <div class="fullscreen text-center">
+          <h1 class="">Ojalla Bridge <small style="color: rgba(255,255,255,0.95)"></br>Drift to Morgan $20 </br>
+                      Park Amenities</br>
+                      Boat Slide Restrooms </br>
+                      NO Camping
+                    </small></h1>
+
+          </div>
+        </section>
+        <section data-scene="scene7" data-background="img/morgan.jpg">
+          <div class="fullscreen text-center">
+          <h1 class="">Morgan Park <small style="color: rgba(255,255,255,0.95)"></br>Drift to Strom $20 </br>
+                      Park Amenities</br>
+                      Picnic Restrooms  </br>
+                      Overnight Camping $20
+                    </small></h1>
+
+          </div>
+        </section>
+
+
+          </div>
         </div>
         <div class="col-sm-6 col-md-4 storymap-map"></div>
     </div>
 </div>
+
 <script type="text/javascript">
+
+var colors = chroma.scale('Dark2').mode('lch').colors(10);
+for (i = 1; i < 11; i++) {
+    $('html > head').append($("<style> .marker-icon-" + i.toString() + " { color: " + colors[i] + "; font-size: 15px; text-shadow: 0 0 3px #ffffff;} </style>"));
+}
+
+
+
+var stores_icon = L.geoJson.ajax('assets/stores.geojson', {
+    pointToLayer: function (feature, latlng) {
+    if (feature.properties.location == "Logsden Store"){
+    return L.marker(latlng, {icon: L.divIcon({ html: '<i class="fa fa-store fa-3x"></i>', className: 'marker-icon-3', iconSize: [20, 20] })});
+  } else {
+              return L.marker(latlng, {icon: L.divIcon({html: '<i class="fa fa-car fa-3x"></i>', className: 'marker-icon-8', iconSize: [20, 20]})});
+          }
+      },
+      onEachFeature: function (feature, layer) {
+                      if (feature.properties.location == "Logsden Store"){
+                        return layer.bindPopup(feature.properties.location + "</br>"+feature.properties.Hours +"</br>"+'<img src="img/logsdencountry.jpg" alt="" style="width:300px;height:200px;">' , {sticky: true, className: "feature-tooltip"});
+                  }else {        return layer.bindPopup(feature.properties.location + "</br>"+feature.properties.Hours +"</br>"+'<img src="img/Logsden 069.jpg" alt="" style="width:300px;height:200px;">' , {sticky: true, className: "feature-tooltip"});
+
+                }
+
+          }});
+var launch = L.geoJson.ajax('assets/shuttle.geojson', {
+  pointToLayer: function (feature, latlng) {
+  if (feature.properties.Icon == "1"){
+  return L.marker(latlng, {icon: L.divIcon({ html: '<img src="img/boat-launch.svg" alt="" width="30" height="40">', className: 'marker-icon-3', iconSize: [20, 20] })});
+}
+    },
+  onEachFeature: function (feature, layer) {
+            if (feature.properties.location == "Moonshine Park"){
+              return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 020.jpg" alt="" style="width:300px;height:200px;">' );
+            } else if (feature.properties.location == "Twin Bridges Memorial Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 028.jpg" alt="" style="width:300px;height:200px;">' );
+          } else if (feature.properties.location == "Hee Hee Illahe Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 037.jpg" alt="" style="width:300px;height:200px;">' );
+        } else if (feature.properties.location == "Old Mill Site Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 041.jpg" alt="" style="width:300px;height:200px;">' );
+      } else if (feature.properties.location == "Ojalla Bridge"){ return layer.bindTooltip(feature.properties.location +" Boat Launch"+ '<img src="img/Logsden 046.jpg" alt="" style="width:300px;height:200px;">' +"</br>" +"REQUIRES A ROPE");
+    } else if (feature.properties.location == "Jack Morgan Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 049.jpg" alt="" style="width:300px;height:200px;">' );
+  } else if (feature.properties.location == "Stome County Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 057.jpg" alt="" style="width:300px;height:200px;">' );
+}
+        layer.on('mouseover', function() { layer.openPopup(); });
+        layer.on('mouseout', function() { layer.closePopup(); });
+
+    }, });
 
 
 
     var layers = {
-      ESRI: {layer: L.tileLayer('http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}')},
-      GEE: {layer: L.tileLayer('http://earthengine.google.org/static/hansen_2013/tree_alpha/{z}/{x}/{y}.png')},
 
         layer1: {
             layer: L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiamFrb2J6aGFvIiwiYSI6ImNpcms2YWsyMzAwMmtmbG5icTFxZ3ZkdncifQ.P9MBej1xacybKcDN_jehvw', {
@@ -151,30 +270,29 @@
             })
         },
 
+        store_icon: {layer: stores_icon},
+        launch: {layer: launch},
 
-        layer2: {
-            layer: L.geoJson.ajax('assets/stores.geojson', {onEachFeature: function (feature, layer) {
-                    layer.bindPopup(feature.properties.location  +'<br/>'  + "Hours: " +feature.properties.Hours + '<br/>' +"Address: " +feature.properties.address   );
-                    layer.on('mouseover', function() { layer.openPopup(); });
-                    layer.on('mouseout', function() { layer.closePopup(); });
-                },  })},
+
         layer3: {layer: L.geoJson.ajax('assets/shuttle.geojson', {onEachFeature: function (feature, layer) {
                 layer.bindPopup(feature.properties.location );
-
                 layer.on('mouseover', function() { layer.openPopup(); });
                 layer.on('mouseout', function() { layer.closePopup(); });
 
-            },  })}
-
+            },  })},
 
 
     };
 
 
     var scenes = {
-        scene1: {lat: 44.757, lng: -123.9, zoom: 12, layers: [layers.layer1,layers.layer2], name: "scene1"},
-        scene2: {lat: 44.777, lng: -123.93, zoom: 12.4, layers: [layers.layer1,layers.layer3], name: "scene2"},
-        scene3: {lat: 44.7764564, lng: -123.837042, zoom: 16, layers: [layers.ESRI], name: "scene3"}
+        scene1: {lat: 44.757, lng: -123.9, zoom: 12, layers: [layers.layer1,layers.store_icon], name: "scene1"},
+        scene2: {lat: 44.777, lng: -123.93, zoom: 12.4, layers: [layers.layer1,layers.launch], name: "scene2"},
+        scene3: {lat: 44.7764564, lng: -123.837042, zoom: 16, name: "scene3"},
+        scene4: {lat: 44.7764564, lng: -123.837042, zoom: 16, name: "scene4"},
+        scene5: {lat: 44.7764564, lng: -123.837042, zoom: 16, name: "scene5"},
+        scene6: {lat: 44.7764564, lng: -123.837042, zoom: 16, name: "scene6"},
+        scene7: {lat: 44.7764564, lng: -123.837042, zoom: 16, name: "scene7"}
     };
 
 
@@ -198,7 +316,6 @@
               id: 'mapbox.outdoors',
               detectRetina: true
 }).addTo(map);
-
 
             return map;
         }
