--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -157,17 +157,17 @@
               <p>Logsden Store DOES NOT collect money for the shuttles.</p>
             </section>
             <section data-scene="scene3" data-background="img/moonshine.jpg">
-              <div class="fullscreen text-center">
+              <div class="fullscreen text-right">
               <h1 class="">Moonshine Park <small style="color: rgba(255,255,255,0.95)"></br>Drift down to Twin $20 </br>
                           Park Amenities and Fees </br>
                           Day Use  $3 per Vehicle </br>
-                          Overnight Camping $20 
+                          Overnight Camping $20
                         </small></h1>
 
               </div>
             </section>
             <section data-scene="scene4" data-background="img/twin.jpg">
-              <div class="fullscreen text-center">
+              <div class="fullscreen text-left">
               <h1 class="">Twin Bridges <small style="color: rgba(255,255,255,0.95)"></br>Drift to Hee Hee Illahe Park $20 </br>
                           Park Amenities</br>
                           Batroom and Picnic Tables </br>
@@ -180,14 +180,14 @@
 
         </section>
         <section data-scene="scene5" data-background="img/oldmill.jpg">
-          <div class="fullscreen text-center">
+          <div class="fullscreen text-left">
           <h1 class="">Old Mill<small style="color: rgba(255,255,255,0.95)"></br>Drift to Ojalla $20 </br>
                       NO Camping
                     </small></h1>
 
         </section>
         <section data-scene="scene6" data-background="img/ojalla.jpg">
-          <div class="fullscreen text-center">
+          <div class="fullscreen text-right">
           <h1 class="">Ojalla Bridge <small style="color: rgba(255,255,255,0.95)"></br>Drift to Morgan $20 </br>
                       Park Amenities</br>
                       Boat Slide Restrooms </br>
@@ -197,7 +197,7 @@
           </div>
         </section>
         <section data-scene="scene7" data-background="img/morgan.jpg">
-          <div class="fullscreen text-center">
+          <div class="fullscreen text-right">
           <h1 class="">Morgan Park <small style="color: rgba(255,255,255,0.95)"></br>Drift to Strom $20 </br>
                       Park Amenities</br>
                       Picnic Restrooms  </br>
