--- a/RiverShuttleService.html
+++ b/RiverShuttleService.html
@@ -250,8 +250,8 @@ var launch = L.geoJson.ajax('assets/shuttle.geojson', {
               return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 020.jpg" alt="" style="width:300px;height:200px;">' );
             } else if (feature.properties.location == "Twin Bridges Memorial Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 028.jpg" alt="" style="width:300px;height:200px;">' );
           } else if (feature.properties.location == "Hee Hee Illahe Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 037.jpg" alt="" style="width:300px;height:200px;">' );
-        } else if (feature.properties.location == "Old Mill Site Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 041.jpg" alt="" style="width:300px;height:200px;">' );
-      } else if (feature.properties.location == "Ojalla Bridge"){ return layer.bindTooltip(feature.properties.location +" Boat Launch"+ '<img src="img/Logsden 046.jpg" alt="" style="width:300px;height:200px;">' +"</br>" +"REQUIRES A ROPE");
+        } else if (feature.properties.location == "Old Mill Site Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/oldmill.jpg" alt="" style="width:300px;height:200px;">' );
+      } else if (feature.properties.location == "Ojalla Bridge"){ return layer.bindTooltip(feature.properties.location +" Boat Launch"+ '<img src="img/ojalla.jpg" alt="" style="width:300px;height:200px;">' +"</br>" +"REQUIRES A ROPE");
     } else if (feature.properties.location == "Jack Morgan Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 049.jpg" alt="" style="width:300px;height:200px;">' );
   } else if (feature.properties.location == "Stome County Park"){ return layer.bindTooltip(feature.properties.location +" Boat Launch" +"</br>" + '<img src="img/Logsden 057.jpg" alt="" style="width:300px;height:200px;">' );
 }
