--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <p class="card-text">Moonshine Park is located just 4 miles down Moonshine Park Rd just across the Bridge from the Logsden Store.  </p>
           </div>
           <div class="card-footer">
-            <a href="moonshine.html" class="btn btn-primary">Learn More</a>
+            <a href="https://www.co.lincoln.or.us/parks/page/moonshine-park" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
@@ -207,12 +207,12 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Community Club</h4>
+          <h4 class="card-header">Siletz River Levels</h4>
           <div class="card-body">
-            <p class="card-text"> For those in the area, there is a monthly community meeting held every 2nd Saturday of the month!</p>
+            <p class="card-text"> Look  at current water levels of the siletz river</p>
           </div>
           <div class="card-footer">
-            <a href="https://www.facebook.com/groups/1058274074202523/" class="btn btn-primary">Learn More</a>
+            <a href="https://waterdata.usgs.gov/nwisweb/graph?agency_cd=USGS&site_no=14305500&parm_cd=00060&period=7#.Up1MZeurQXQ.blogger" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
