--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
           <div class="card-body">
             <h4 class="card-title">Sue </h4>
             <h6 class="card-subtitle mb-2 text-muted">Deli Artiste</h6>
-            <p class="card-text">Sue works many days and kicks but by keeping the deli up todate. She has been with us since 2000.</p>
+            <p class="card-text">Sue works many days and nights, keeping the deli up todate. She has been with us since 2000.</p>
           </div>
           <div class="card-footer">
 
@@ -176,7 +176,7 @@
             <p class="card-text">Tesha is our local Shuttle Lady and also can be seen working evenings.</p>
           </div>
           <div class="card-footer">
-            <a href="#">name@example.com</a>
+
           </div>
         </div>
       </div>
