--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Siletz River Levels</h4>
+          <h4 class="card-header">Siletz River Water Levels</h4>
           <div class="card-body">
             <p class="card-text"> Look  at current water levels of the siletz river</p>
           </div>
