--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>Contact Us</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -121,17 +121,17 @@
       </div>
       <!-- Contact Details Column -->
       <div class="col-lg-4 mb-4">
-        <h3>Contact Details</h3>
+        <h3>Contact Details of the Logsden Store</h3>
         <p>
           7550 Logsden Rd.
           <br>Logsden, OR 97357
           <br>
         </p>
         <p>
-          <abbr title="Phone">P</abbr>: (541) 444-2088
+          <abbr title="Phone">Phone</abbr>: (541) 444-2088
         </p>
         <p>
-          <abbr title="Email">E</abbr>:
+          <abbr title="Email">Email</abbr>:
           <a href="mailto:logsdencountry@yahoo.com">logsdencountry@yahoo.com
           </a>
         </p>
@@ -141,7 +141,9 @@
           <abbr title="Hours">Hours </abbr>: Sunday : 8:00 AM to 4:00 PM
         </p>
       </div>
+
     </div>
+
     <!-- /.row -->
 
     <!-- Contact Form -->
