--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <p class="card-text">Moonshine Park is located just 4 miles down Moonshine Park Rd just across the Bridge from the Logsden Store.  </p>
           </div>
           <div class="card-footer">
-            <a href="https://www.co.lincoln.or.us/parks/page/moonshine-park" class="btn btn-primary">Learn More</a>
+            <a href="moonshine.html" class="btn btn-primary">Learn More</a>
           </div>
         </div>
       </div>
@@ -201,7 +201,7 @@
             <p class="card-text"> Local resident, Tesha Socha,  provides a shuttle service up and down the Siletz River. Her number is 541-444-1111.  </p>
           </div>
           <div class="card-footer">
-            <a href="RiverShuttleService.html" class="btn btn-primary">Learn More</a>
+            <a href="RiverShuttleService.html" class="btn btn-primary">Interactive Map</a>
           </div>
         </div>
       </div>
@@ -212,7 +212,7 @@
             <p class="card-text"> Look  at current water levels of the siletz river</p>
           </div>
           <div class="card-footer">
-            <a href="https://waterdata.usgs.gov/nwisweb/graph?agency_cd=USGS&site_no=14305500&parm_cd=00060&period=7#.Up1MZeurQXQ.blogger" class="btn btn-primary">Learn More</a>
+            <a href="https://waterdata.usgs.gov/nwisweb/graph?agency_cd=USGS&site_no=14305500&parm_cd=00060&period=7#.Up1MZeurQXQ.blogger" class="btn btn-primary">USGS Graph</a>
           </div>
         </div>
       </div>
@@ -223,7 +223,7 @@
             <p class="card-text">For those in the area, there is a monthly community meeting held every 2nd Saturday of the month!</p>
           </div>
           <div class="card-footer">
-            <a href="https://www.facebook.com/groups/1058274074202523/" class="btn btn-primary">Learn More</a>
+            <a href="https://www.facebook.com/groups/1058274074202523/" class="btn btn-primary">Facebook Page</a>
           </div>
         </div>
       </div>
