--- a/moonshine.html
+++ b/moonshine.html
@@ -17,7 +17,24 @@
   <link href="css/modern-business.css" rel="stylesheet">
 
 </head>
+<style>
+.button {
+  position: absolute;
+  background-color: #64a19d;
+  border: none;
+  top: 60%;
+  left: 50%;
+  color: white;
+  padding: 15px 25px;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+}
 
+.button:hover {
+  background-color: #4f837f;
+}
+</style>
 <body>
 
   <!-- Navigation -->
@@ -35,9 +52,7 @@
           <li class="nav-item active">
             <a class="nav-link" href="services.html">History</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+
           <li class="nav-item dropdown">
         <!---    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Portfolio
@@ -60,17 +75,9 @@
               <a class="dropdown-item" href="moonshine.html">Moonshine Park</a>
             </div>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Other Pages
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-              <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item" href="404.html">404</a>
-              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
           </li>
         </ul>
       </div>
@@ -93,12 +100,12 @@
     </ol>
 
     <!-- Image Header -->
-    <img class="img-fluid rounded mb-4" src="img/moonshine.html" alt="">
+    <img class="img-fluid rounded mb-4" src="img/moonshine.jpg" alt="">
 
 
     <div class="row">
       <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="img/CarolValley.jpeg" alt="">
+        <img class="img-fluid rounded mb-4" src="img/moonshinewater.jpg" alt="">
       </div>
       <div class="col-lg-6">
         <h2>Moonshine Park</h2>
@@ -108,7 +115,8 @@
         <p>  In the winter, the park has some of the nicest fishing holes in the area.  </p>
         <p> </p>
         <p> </p>
-        <p> </p>
+      <button class="button"  onclick="window.location.href='https://www.co.lincoln.or.us/parks/page/moonshine-park'">Moonshine Park Webpage</button>
+
 
       </div>
     </div>
